tests/bad/syntax/077-recfun.clap
def f (x : { U }) = g (U) 
and g (x : { U }) = f (U)
with h (x : { U }) (y : { U }) = g x

